better router outlet

--- a/web/example/dist-golden/ssg/yes/index.html
+++ b/web/example/dist-golden/ssg/yes/index.html
@@ -21,11 +21,13 @@
 			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump1',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump1</a></li>
 			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump2',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
-	</nav> <script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'YesSSGPage',{}])"></script>
-	<main>
-		<h1>SSG yes</h1>
-		<div id="jump1">Jump 1</div>
-		<div id="jump2">Jump 2</div>
+	</nav>
+	<main><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'YesSSGPage',{}])"></script>
+		<div>
+			<h1>SSG yes</h1>
+			<div id="jump1">Jump 1</div>
+			<div id="jump2">Jump 2</div>
+		</div>
 	</main>
 </body>
 
