--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -20,9 +20,11 @@
 			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump1',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump1</a></li>
 			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump2',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
-	</nav> <script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'ErrorPage',{}])"></script>
-	<main>
-		<h1>404 page :(</h1>
+	</nav>
+	<main><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'ErrorPage',{}])"></script>
+		<div>
+			<h1>404 page :(</h1>
+		</div>
 	</main>
 </body>
 
