--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -21,45 +21,47 @@
 			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump1',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump1</a></li>
 			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump2',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
-	</nav> <script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'IndexPage',{}])"></script>
-	<main>
-		<h1>Hello world!</h1>
-		<div id="jump1">Jump 1</div>
-		<h1>Headline 1</h1>
-		<h2>This is a variable</h2>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{maxlength:10,value:'foo',}])"></script>
-			<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="10" value="foo"> <span> 7 / 10 Remaining </span> </div>
+	</nav>
+	<main><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'IndexPage',{}])"></script>
+		<div>
+			<h1>Hello world!</h1>
+			<div id="jump1">Jump 1</div>
+			<h1>Headline 1</h1>
+			<h2>This is a variable</h2>
+			<div><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{maxlength:10,value:'foo',}])"></script>
+				<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="10" value="foo"> <span> 7 / 10 Remaining </span> </div>
+			</div>
+			<div><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{maxlength:777,}])"></script>
+				<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="777"> <span> 777 / 777 Remaining </span> </div>
+			</div>
+			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
+			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
+			<p><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'home',}])"></script><a href="/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Link to homepage</a></p>
+			<h2>Headline 2</h2>
+			<blockquote>
+				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
+			</blockquote>
+			<p>Joseph&#39;s coat was red and yellow and green and brown and scarlet.</p>
+			<ul>
+				<li> ut aliquip ex</li>
+				<li> ea commodo consequat.<ul>
+						<li> Duis aute</li>
+						<li> irure dolor in</li>
+					</ul>
+				</li>
+				<li> ut aliquip ex</li>
+			</ul>
+			<ol>
+				<li> ut aliquip ex</li>
+				<li> ea commodo consequat.<ol>
+						<li> Duis aute</li>
+						<li> irure dolor in</li>
+					</ol>
+				</li>
+				<li> ut aliquip ex</li>
+			</ol>
+			<div id="jump2">Jump 2</div>
 		</div>
-		<div><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{maxlength:777,}])"></script>
-			<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="777"> <span> 777 / 777 Remaining </span> </div>
-		</div>
-		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
-		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'home',}])"></script><a href="/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Link to homepage</a></p>
-		<h2>Headline 2</h2>
-		<blockquote>
-			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
-		</blockquote>
-		<p>Joseph&#39;s coat was red and yellow and green and brown and scarlet.</p>
-		<ul>
-			<li> ut aliquip ex</li>
-			<li> ea commodo consequat.<ul>
-					<li> Duis aute</li>
-					<li> irure dolor in</li>
-				</ul>
-			</li>
-			<li> ut aliquip ex</li>
-		</ul>
-		<ol>
-			<li> ut aliquip ex</li>
-			<li> ea commodo consequat.<ol>
-					<li> Duis aute</li>
-					<li> irure dolor in</li>
-				</ol>
-			</li>
-			<li> ut aliquip ex</li>
-		</ol>
-		<div id="jump2">Jump 2</div>
 	</main>
 </body>
 
