--- a/web/example/dist-golden/index.html
+++ b/web/example/dist-golden/index.html
@@ -26,14 +26,15 @@
 		<div>
 			<h1>Hello world!</h1>
 			<div id="jump1">Jump 1</div>
+			<ol>
+				<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'ListItemComponent',{uid:'test',value:'Hello',}])"></script>
+					<div> <button type="button">↑</button> <button type="button">↓</button> <script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{value:'Hello',}])"></script>
+						<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="10" value="Hello"> <span> 5 / 10 Remaining </span> </div>
+					</div>
+				</li>
+			</ol>
 			<h1>Headline 1</h1>
 			<h2>This is a variable</h2>
-			<div><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{maxlength:10,value:'foo',}])"></script>
-				<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="10" value="foo"> <span> 7 / 10 Remaining </span> </div>
-			</div>
-			<div><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'Textbox',{maxlength:777,}])"></script>
-				<div> <input oninput="this.closest('[data-component=&quot;Textbox&quot;]').instance.handleInput(event,)" placeholder="Type here" type="text" maxlength="777" value=""> <span> 777 / 777 Remaining </span> </div>
-			</div>
 			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
 			<p><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'home',}])"></script><a href="/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Link to homepage</a></p>
