rm some redundant html

--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -5,23 +5,23 @@
 	<title>Error 404</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js" type="module"></script>
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="/styles.css"> <script>window.Component=window.Component||[];</script>
 </head>
 
 <body>
 	<nav>
 		<ul>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'error404',}])"></script><a href="/404.html" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go error404</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'home',}])"></script><a href="/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go home</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'homeJump1',}])"></script><a href="/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'homeJump2',}])"></script><a href="/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgNo',}])"></script><a href="/ssg/no" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYes',}])"></script><a href="/ssg/yes" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump1',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'AppRouteComponent',{to:'ssgYesJump2',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=&quot;AppRouteComponent&quot;]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'error404',}])"></script><a href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'home',}])"></script><a href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'homeJump1',}])"></script><a href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'homeJump2',}])"></script><a href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'ssgNo',}])"></script><a href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'ssgYes',}])"></script><a href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'ssgYesJump1',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
+			<li><script src="data:text/javascript," onload="Component.push([this,'AppRouteComponent',{to:'ssgYesJump2',}])"></script><a href="/ssg/yes/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
-	<main><script src="data:text/javascript," onload="window.Component=window.Component||[];window.Component.push([this,'ErrorPage',{}])"></script>
+	<main><script src="data:text/javascript," onload="Component.push([this,'ErrorPage',{}])"></script>
 		<div>
 			<h1>404 page :(</h1>
 		</div>
