Actually just add data-uid if specified

--- a/web/example/dist-golden/404.html
+++ b/web/example/dist-golden/404.html
@@ -11,18 +11,18 @@
 <body>
 	<nav>
 		<ul>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'error404',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'home',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'homeJump1',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'homeJump2',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgNo',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgYes',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgYesJump1',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/ssg/yes/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
-			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgYesJump2',}])"></script><a data-component="AppRouteComponent" data-uid="/UID/" href="/ssg/yes/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'error404',}])"></script><a data-component="AppRouteComponent" href="/404.html" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go error404</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'home',}])"></script><a data-component="AppRouteComponent" href="/" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go home</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'homeJump1',}])"></script><a data-component="AppRouteComponent" href="/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump1</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'homeJump2',}])"></script><a data-component="AppRouteComponent" href="/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go homeJump2</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgNo',}])"></script><a data-component="AppRouteComponent" href="/ssg/no" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgNo</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgYes',}])"></script><a data-component="AppRouteComponent" href="/ssg/yes" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYes</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgYesJump1',}])"></script><a data-component="AppRouteComponent" href="/ssg/yes/#jump1" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump1</a></li>
+			<li><script src="data:text/javascript," onload="toInit.push([this,'AppRouteComponent',,{to:'ssgYesJump2',}])"></script><a data-component="AppRouteComponent" href="/ssg/yes/#jump2" onclick="this.closest('[data-component=AppRouteComponent]').instance.onClick(event,)">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main><script src="data:text/javascript," onload="toInit.push([this,'ErrorPage',,{}])"></script>
-		<div data-component="ErrorPage" data-uid="/UID/">
+		<div data-component="ErrorPage">
 			<h1>404 page :(</h1>
 		</div>
 	</main>
